--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,9 @@
     "max-len": "off", // "max-len": ["error", { "code": 120 }],
     "no-use-before-define": ["error", "nofunc"],
     "quote-props": ["error", "consistent"],
+    // note you must disable the base rule as it can report incorrect errors
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }],
     // Exclusive for danchiano-sdk:
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
